Fix spacing issue in fotter and margins on comment section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,11 +40,8 @@ a {
     overflow: scroll;
     max-height: 500px;
     border-radius: 15px;
-}
+    background-color: blue;
 
-#inner-frame {
-    border-radius: 15px;
-    margin: 5%;
 }
 
 .fa-solid.fa-star {
